gate selection